--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Jane Jones' Website</title>
+        <title>Parker's Website Supreme Website</title>
     </head>
     <body>
         <h1>
-            This is easy and fun!
+            This is not easy and fun!
         </h1>
     </body>
 </html>
