--- a/index.html
+++ b/index.html
@@ -2,25 +2,17 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Parker's Hearthstone Card Rankings</title>
+        <title>Parker's RenoMage Deck</title>
     </head>
     <body>
       <h1>
-        Hearthstone
+        Parker's Fun With Reno Mage 
       </h1>
+      <p>This is my guide to playing the beauty that is a terrible Reno Deck. It is not really consistant and I'm stuck at rank 19 because of it, however the games I have played have been some of the greatest comebacks and overkills I've ever seen. Whether its Unstable Portal into Aviana into Golden Monkey or instant concedes after I play Reno, this is the most fun I've had in Hearthstone. So, I decided to share it and my strats with the world. </p>
       <table>
-        <tr>
-          <th>
-            <img src = "http://hydra-media.cursecdn.com/hearthstone.gamepedia.com/thumb/6/65/Sen'jin_Shieldmasta_(art).jpg/500px-Sen'jin_Shieldmasta_(art).jpg?version=3dc88d21587862f27bded5a2eb2760ea" width="200">
-          </th>
-        </tr>
-        <tr>
-          <td>Sen'jin Shieldmasta </td>
-        </tr>
-        <tr>
-          <td>3 Attack </td>
-          <td>5 Health </td>
-        </tr>
+        <thead>
+            <
+        </thead>
       </table>
   </body>
 </html>
