--- a/index.html
+++ b/index.html
@@ -9,10 +9,25 @@
         Parker's Fun With Reno Mage 
       </h1>
       <p>This is my guide to playing the beauty that is a terrible Reno Deck. It is not really consistant and I'm stuck at rank 19 because of it, however the games I have played have been some of the greatest comebacks and overkills I've ever seen. Whether its Unstable Portal into Aviana into Golden Monkey or instant concedes after I play Reno, this is the most fun I've had in Hearthstone. So, I decided to share it and my strats with the world. </p>
-      <table>
+      <table border="1px">
         <thead>
-            
+          <tr>
+            <th colspan="2">"Kill Me" The Reno Mage</th>
+          </tr>
+          <tr>
+            <th>Mana</th>
+            <th>Card Name</th>            
+          </tr>
         </thead>
+        <tbody>
+          <tr>
+            <td>2</td>
+            <td>Unstable Portal</td>
+          </tr>
+        </tbody>
       </table>
-  </body>
-</html>
+      <h1>Strategy Guide</h1>
+      <p> The trick to this game is to maintain </p>
+      <h2>Mulligan Guide</h2>
+    </body>
+  </html>
