--- a/index.html
+++ b/index.html
@@ -22,7 +22,111 @@
         <tbody>
           <tr>
             <td>2</td>
+            <td>Frostbolt</td>
+          </tr>
+          <tr>
+            <td>2</td>
             <td>Unstable Portal</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Jeweled Scarad</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Snowchugger</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>Arcane Intelect x2</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>Forgotten Torch</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>Ice Barrier</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>Mirror Image</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>Argent Horserider</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>Coldlight Oracle</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>Deathlord</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>Shade of Naxxramas</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>Shattered Sun Cleric</td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>Fireball</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Unstable Portal</td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>Polymorph</td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>Elise Starseeker</td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>Piloted Shredder</td>
+          </tr>
+          <tr>
+            <td>4</td> 
+            <td>Sen'jin Sheildmasta</td>
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>Azure Drake x2</td>
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>Ethereal Conjurer</td>
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>Loatheb</td>
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>Sludge Belcher</td>
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>Summoning Stone</td>
+          </tr>
+          <tr>
+            <td>6</td>
+            <td>Reno Jackson</td>
+          </tr>
+          <tr>
+            <td>6</td>
+            <td>Sunwalker</td>
+          </tr>
+          <tr>
+            <td>7</td>
+            <td>Flamestrike</td>>
           </tr>
         </tbody>
       </table>
