--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </tr>
           <tr>
             <td>2</td>
-            <td>Jeweled Scarad</td>
+            <td>Jeweled Scarab</td>
           </tr>
           <tr>
             <td>2</td>
