--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
       <h1>
         Parker's Fun With Reno Mage 
       </h1>
-      <p>This is my guide to playing the beauty that is a terrible Reno Deck. It is not really consistent and I'm stuck at rank 19 because of it, however the games I have played have been some of the greatest comebacks and overkills I've ever seen. Whether its Unstable Portal into Aviana into Golden Monkey or instant concedes after I play Reno, this is the most fun I've had in Hearthstone. So, I decided to share it and my strats with the world. 
-      </p>
+      <p>This is my guide to playing the beauty that is a terrible Reno Deck. It is not really consistent and I'm stuck at rank 19 because of it, however the games I have played have been some of the greatest comebacks and overkills I've ever seen. Whether its Unstable Portal into Aviana into Golden Monkey or instant concedes after I play Reno, this is the most fun I've had in Hearthstone. So, I decided to share it and my strats with the world. </p>
       <table border="1px">
         <thead>
           <tr>
@@ -128,7 +127,7 @@
           </tr>
           <tr>
             <td>7</td>
-            <td>Flamestrike</td>>
+            <td>Flamestrike</td>
           </tr>
         </tbody>
       </table>
