--- a/index.html
+++ b/index.html
@@ -135,6 +135,12 @@
       <p> The trick to this game is to maintain early board control so you have room to play your draw cards. This is to get more answers to threats and take the duplicates out of your deck. Typically, winning games will result in you out lasting your opponent until you get one of the two finisher cards. You're waiting to play a Summoning Stone under a taunt or the glorious Golden Monkey. While typically Summoning Stone is a piece of hot steaming garbage but, Reno Jackson buys you enough time to lose tempo early game so you can play it. This results in DOUBLE the board control as you generate huge minions while you kill your opponent's. Elise Starseeker is normally useless as well but the high amount of card draw makes it fairly consistent. Aggresive decks that play alot of cards fare terribly in a matchup but slower ones like control warrior don't provide a lot of opportunities to play spells and will eventually fatigue you out.</p>
       <h2>Mulligan Guide</h2>
       <p>Your starting hand is very important when playing this type of deck. The three cards to always keep are...</p>
+      <div style="float:left;">
+         <div style="float:left;">
+            <img src="/logo.png" style="float:left;" /></div> 
+        <div style="float:left;"> <img src="/logo2.png" width="55" style="float:left;" height="50"/</div>
+        </div>
+
       <h2> Much Better Reno Mage Decks</h2>
     </body>
   </html>
