--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
       <p>Your starting hand is very important when playing this type of deck. The three cards to always keep are...</p>
       <div style="float:left;">
          <div style="float:left;">
-            <img src="/logo.png" style="float:left;" /></div> 
-        <div style="float:left;"> <img src="/logo2.png" width="55" style="float:left;" height="50"/</div>
+            <img src="489.gif" style="float:left;" /></div> 
+        <div style="float:left;"> <img src="489.gif" style="float:left;" /></div>
         </div>
 
-      <h2> Much Better Reno Mage Decks</h2>
+      <h2> Much Better Reno Mage Decks</h2>\
     </body>
   </html>
