--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       <div style="float:left;">
          <div style="float:left;">
             <img src="489.gif" style="float:left;" /></div> 
-        <div style="float:left;"> <img src="489.gif" style="float:left;" /></div>
+        <div style="float:left;"> <img src="489.gif" style="float:left;" alt="no" /></div>
         </div>
 
       <h2> Much Better Reno Mage Decks</h2>\
