--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
       <div style="float:left;">
          <div style="float:left;">
             <img src="489.gif" style="float:left;" /></div> 
-        <div style="float:left;"> <img src="489.gif" style="float:left;" alt="no" /></div>
+        <div style="float:left;"> <img src="489.gif" style="float:left;" /></div>
         </div>
 
-      <h2> Much Better Reno Mage Decks</h2>\
+      <h2> Much Better Reno Mage Decks</h2>
     </body>
   </html>
