--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
       <div style="float:left;">
          <div style="float:left;">
             <img src="489.gif" style="float:left;" /></div> 
+        <div style="float:left;"> <img src="27210.gif" style="float:left;" /> <div style="float:left;">
+            <img src="489.gif" style="float:left;" /></div> 
         <div style="float:left;"> <img src="27210.gif" style="float:left;" /></div>
         </div>
     </body>
