--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
          <div style="float:left;">
             <img src="489.gif" style="float:left;" /></div> 
         <div style="float:left;"> <img src="27210.gif" style="float:left;" /> <div style="float:left;">
-            <img src="489.gif" style="float:left;" /></div> 
-        <div style="float:left;"> <img src="27210.gif" style="float:left;" /></div>
+            <img src="177.gif" style="float:left;" /></div> 
+        <div style="float:left;"> <img src="Deathlord.gif" style="float:left;" /></div>
         </div>
     </body>
   </html>
