--- a/index.html
+++ b/index.html
@@ -137,10 +137,17 @@
       <p>Your starting hand is very important when playing this type of deck. The three cards to always keep are...</p>
       <div style="float:left;">
          <div style="float:left;">
-            <img src="489.gif" style="float:left;" /></div> 
-        <div style="float:left;"> <img src="27210.gif" style="float:left;" /> <div style="float:left;">
-            <img src="177.gif" style="float:left;" /></div> 
-        <div style="float:left;"> <img src="Deathlord.gif" style="float:left;" /></div>
+            <img src="489.gif" style="float:left;" />
+        </div> 
+        <div style="float:left;"> 
+            <img src="27210.gif" style="float:left;"/> 
+        </div>
+        <div style="float:left;">
+            <img src="177.gif" style="float:left;" />
+        </div> 
+        <div style="float:left;"> 
+            <img src="Deathlord.gif" style="float:left;" />
+        </div>
         </div>
     </body>
   </html>
