--- a/index.html
+++ b/index.html
@@ -137,17 +137,18 @@
       <p>Your starting hand is very important when playing this type of deck. The three cards to always keep are...</p>
       <div style="float:left;">
          <div style="float:left;">
-            <img src="489.gif" style="float:left;" height="55"/>
+            <img src="489.gif" style="float:left;"/>
         </div> 
         <div style="float:left;"> 
-            <img src="27210.gif" style="float:left;" height="55"/> 
+            <img src="27210.gif" style="float:left;"/> 
         </div>
         <div style="float:left;">
-            <img src="177.gif" style="float:left;" height="55"/>
+            <img src="177.gif" style="float:left;"/>
         </div> 
         <div style="float:left;"> 
-            <img src="Deathlord.gif" style="float:left;" height="55"/>
+            <img src="Deathlord.gif" style="float:left;"/>
         </div>
       </div>
+      <h2>Way Better Meta Decks</h2>
     </body>
   </html>
