--- a/index.html
+++ b/index.html
@@ -150,5 +150,8 @@
         </div>
       </div>
       <h2>Way Better Meta Decks</h2>
+      <a href="http://sakana-comic.com/">
+          <img border="0" src="177.gif" width="100" height="100">
+      </a>
     </body>
   </html>
