--- a/index.html
+++ b/index.html
@@ -149,9 +149,11 @@
             <img src="Deathlord.gif" style="float:left;"/>
         </div>
       </div>
-      <h2>Way Better Meta Decks</h2>
-      <a href="http://sakana-comic.com/">
+      <div>
+        <h2>Way Better Meta Decks</h2>
+        <a href="http://sakana-comic.com/">
           <img border="0" src="177.gif" width="100" height="100">
-      </a>
+        </a>
+      </div>
     </body>
   </html>
