--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       </div>
       <div>
         <h2>Way Better Meta Decks</h2>
-        <a href="http://sakana-comic.com/">
+        <a href="http://www.paranatural.net/">
           <img border="0" src="177.gif" width="100" height="100">
         </a>
       </div>
