--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <img src="Deathlord.gif" style="float:left;"/>
         </div>
       </div>
-      <div>
+      <div style="float:center;">
         <h2>Way Better Meta Decks</h2>
         <a href="http://www.paranatural.net/">
           <img border="0" src="177.gif" width="100" height="100">
