--- a/index.html
+++ b/index.html
@@ -141,9 +141,11 @@
         <div style="float:left;"><img src="177.gif" style="float:left;"/></div> 
         <div style="float:left;"><img src="Deathlord.gif" style="float:left;"/></div>
       </div>
-      <h2>Way Better Meta Decks</h2>
-      <a href="http://www.paranatural.net/">
-        <img border="0" src="489.gif" width="100" height="100">
-      </a>
+      <div>
+        <h2>Way Better Meta Decks</h2>
+        <a href="http://www.paranatural.net/">
+            <img border="0" src="177.gif" width="100" height="100">
+        </a>
+      </div>
     </body>
   </html>
