--- a/index.html
+++ b/index.html
@@ -141,11 +141,11 @@
         <div style="float:left;"><img src="177.gif" style="float:left;"/></div> 
         <div style="float:left;"><img src="Deathlord.gif" style="float:left;"/></div>
       </div>
-      <dl>
+      <div>
         <h2>Way Better Meta Decks</h2>
         <a href="http://www.paranatural.net/">
             <img border="0" src="177.gif" width="100" height="100">
         </a>
-      </dl>
+      </div>
     </body>
   </html>
