--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
       <div>
         <h2>Way Better Meta Decks</h2>
         <a href="https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#"> A way better one that has quadruple the win rate</a>
+        And 
         <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=2&cad=rja&uact=8&ved=0ahUKEwj0y_GLx53LAhUS4mMKHXo6BxQQFggjMAE&url=http%3A%2F%2Fwww.hearthpwn.com%2Fdecks%2F413068-legend-reno-control-mage-s-22&usg=AFQjCNFieADeSKMvc4X1E5rdSYGoDdhjoQ&sig2=z9UoNzKcUatwwWpYmcohVQ&bvm=bv.115339255,d.cGc"> Another one</a>
       </div>
     </body>
